# Urban-Renovations

./: .gitattributes  .gitignore  Prompt_Audit_Report.docx  README.md  RESEARCH_REPORT.md  pyproject.toml  requirements.txt  run_main_conda.bat  ~$ompt_Audit_Report.docx
doc/: 403抓包诊断指南.md  evaluation_baseline_20260408.md  probe100_pipeline_report_20260407.md  urban_renewal_experiment_full.docx  两类提示词注入无模型模拟报告.md  实验报告.md  实验操作说明.md  实验方案.docx  提示词策略长期维护与迁移说明.md  数据标注规范文档V2.0.docx  空间研究提示词.docx  策略.md  论文实验设计与实验评估方案.md
legacy/: evaluate_result1.py  extract_study_area_llm.py  study_area_llm_config.json
notebooks/: experiment1_extraction.ipynb
scripts/: __init__.py  _compat.py  audit_prompts.py  benchmark_api_vs_classifier.py  chat_manager.py  debug_probe_llm.py  discover_dynamic_topics.py  evaluate.py  export_unknown_review.py  generate_full_task_sample.py  generate_spatial_annotation_subset.py  generate_stage_report.py  main.py  main_py313.py  manage_prompt_strategies.py  merge_results.py  run_stable_release.py  simulate_prompt_injection.py
src/: _compat.py  config.py  data_processor.py  evaluation_core.py  llm_client.py  memory.py  merged_output.py  project_paths.py  prompt_manifest.py  prompt_strategy_manager.py  prompt_strategy_registry.py  prompts.py  review_experiment_report.py  review_workbook_analysis.py  task_router.py  urban_bertopic_service.py  urban_family_gate.py  urban_hybrid_classifier.py  urban_metadata.py  urban_rule_filter.py  urban_topic_classifier.py  urban_topic_taxonomy.py  urban_training_contract.py
tests/: test_dynamic_binary_refinement.py  (+24 more)
(+115 files in other folders)
